--- a/style.css
+++ b/style.css
@@ -853,7 +853,12 @@ body, html {
         max-width: 900px;
     }
 }
-
+/* Narrow Tall Devices (Width < 400px and Height > 800px) - Reduce input width for arrow visibility */
+@media (max-width: 399px) and (min-height: 800px) {
+    .input-wrapper input {
+        max-width: calc(100% - 100px);
+    }
+}
 /* Extra Large Devices (Wide Desktops - 1441px and up) */
 @media (min-width: 1441px) {
     .main-content {
@@ -1115,6 +1120,7 @@ body, html {
     display: inline-block;
     background: transparent;
     margin-top: 20px;
+    margin-bottom: 30px;
     color: whitesmoke;
     text-decoration: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -1984,4 +1990,5 @@ body, html {
         width: 80px;
     }
 }
+
 
